<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LockPhoto</string>

    <!--解锁界面-->
    <string name="lock_enter_password">Please Input Password</string>
    <string name="password_error">Password Error</string>
    <string name="password_different">Passwords are Inconsistent</string>
    <string name="lock_title_input">Input Password</string>
    <string name="lock_title_setting">Setting Password</string>
    <string name="lock_title_input_again">Input Password Again</string>
    <string name="home">Home</string>

    <!--文件预览-->
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="move">Move</string>
    <string name="download">Download</string>
    <string name="add_photo_album">Add Photo Album</string>
    <string name="photo_album_name">Photo Album\'s Name</string>
    <string name="please_input">Input</string>
    <string name="choose_cover">Click This to Change Cover</string>
    <string name="edit_folder">Edit</string>
    <string name="file_detail">Detail</string>
    <string name="file_name">Title:</string>
    <string name="file_time">Create Time:</string>
    <string name="file_size">Size:</string>
    <string name="file_select_more">Select</string>
    <string name="file_select_all">Select All</string>
    <string name="delete_failure">Delete Failure</string>
    <string name="edit_failure">Edit Failure</string>
    <string name="move_failure">Move Failure</string>
    <string name="download_failure">Download Failure</string>
    <string name="no_folder">Can\'t Find the Folder</string>
    <string name="delete_photo_album_content">Are you sure delete this Album?</string>
    <string name="delete_setting_content">For the safety of your album, it is recommended to delete the original file of the album</string>

    <!--主页-->
    <string name="main_photo_album">Picture</string>
    <string name="main_video">Video</string>
    <string name="main_setting">Setting</string>
    <string name="main_about">About</string>

    <!--设置-->
    <string name="change_password">Change Password</string>
    <string name="clear_picture">Delete All Files</string>
    <string name="is_delete_original">Delete The Original File</string>

    <string name="empty">No More</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="loading_error">Loading Error</string>
    <string name="tip">"Tip"</string>
    <string name="no_prompt">No prompt</string>

    <!--error message-->
    <string name="error_message_parse_error">Parsing error, try later</string>
    <string name="error_message_network_error">network connection error, try later</string>
    <string name="error_message_ssl_error">Certificate error, try later</string>
    <string name="error_message_timeout_error">Network connection timed out, try later</string>
    <string name="error_message_try_again">Failed to ask, try again later</string>
    <!--error message end-->
</resources>