<?xml version="1.0" encoding="utf-8"?>
<com.nmk.myapplication.work.ui.view.shape.widget.HConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:h_shape_corners_radius_left_top="8dp"
    app:h_shape_corners_radius_right_top="8dp"
    android:padding="16dp"
    app:h_shape_solid="@color/white">

    <TextView
        android:id="@+id/titleTv"
        style="@style/textStyle"
        android:textSize="16sp"
        android:text="@string/file_detail"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/nameTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        style="@style/textStyle"
        android:text="@string/file_name"/>

    <TextView
        android:id="@+id/nameContentTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="@+id/nameTv"
        app:layout_constraintBottom_toBottomOf="@+id/nameTv"
        app:layout_constraintStart_toEndOf="@+id/nameTv"
        style="@style/textStyle"
        android:text="文件名"/>

    <TextView
        android:id="@+id/timeTv"
        app:layout_constraintTop_toBottomOf="@+id/nameTv"
        style="@style/textStyle"
        android:text="@string/file_time"/>

    <TextView
        android:id="@+id/timeContentTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@+id/timeTv"
        app:layout_constraintBottom_toBottomOf="@+id/timeTv"
        app:layout_constraintStart_toEndOf="@+id/timeTv"
        style="@style/textStyle"
        tools:text="2023-10-29 17:47"/>

    <TextView
        android:id="@+id/sizeTv"
        app:layout_constraintTop_toBottomOf="@+id/timeTv"
        style="@style/textStyle"
        android:text="@string/file_size"/>

    <TextView
        android:id="@+id/sizeContentTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@+id/sizeTv"
        app:layout_constraintBottom_toBottomOf="@+id/sizeTv"
        app:layout_constraintStart_toEndOf="@+id/sizeTv"
        style="@style/textStyle"
        tools:text="20G"/>


</com.nmk.myapplication.work.ui.view.shape.widget.HConstraintLayout>