<?xml version="1.0" encoding="utf-8"?>
<com.nmk.myapplication.work.ui.view.shape.widget.HConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="52dp"
    app:h_shape_corners_radius="8dp"
    app:h_shape_solid="@color/white">

    <TextView
        android:id="@+id/titleTv"
        style="@style/textStyle"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tip"
        android:textFontWeight="600"
        android:textSize="16sp"
        android:textColor="@color/textColor_333333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconImv" />

    <TextView
        android:id="@+id/contentTv"
        style="@style/textStyle"
        android:textSize="14sp"
        android:text="@string/delete_setting_content"
        android:textFontWeight="600"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:textColor="@color/textColor_333333"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        />

    <ImageView
        android:id="@+id/checkboxImv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_un_select"
        app:layout_constraintTop_toBottomOf="@+id/contentTv"/>

    <TextView
        style="@style/textStyle"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/checkboxImv"
        app:layout_constraintTop_toTopOf="@+id/checkboxImv"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkboxImv"
        android:text="@string/no_prompt"/>

    <com.nmk.myapplication.work.ui.view.shape.widget.HTextView
        android:id="@+id/sureTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:h_shape_solid="@color/main_color"
        app:h_shape_corners_radius="2dp"
        app:layout_constraintEnd_toStartOf="@+id/cancelTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="34dp"
        app:layout_constraintTop_toBottomOf="@+id/checkboxImv" />

    <com.nmk.myapplication.work.ui.view.shape.widget.HTextView
        android:id="@+id/cancelTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:h_shape_corners_radius="2dp"
        app:h_shape_solid="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sureTv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="34dp"
        app:layout_constraintTop_toBottomOf="@+id/checkboxImv" />

</com.nmk.myapplication.work.ui.view.shape.widget.HConstraintLayout>